--- a/views/home.pug
+++ b/views/home.pug
@@ -8,7 +8,7 @@ html(lang="en")
     body
         header
             nav.header-nav
-                img.logo(src="/images/logo.png", alt="Dating App Logo")
+                img.logo(src="/pictures/logo.png", alt="Dating App Logo")
                 div.menu
                     a(href="/home").menu-item Home
                     a(href="/support").menu-item Support
