--- a/views/register2.pug
+++ b/views/register2.pug
@@ -7,7 +7,7 @@ html(lang="en")
         link(rel="stylesheet", href="/css/style.css")
     body
         header.header-nav
-            img.logo(src="/images/logo.png", alt="Yama Logo")
+            img.logo(src="/pictures/logo.png", alt="Yama Logo")
             nav.menu
                 a.menu-item(href="/home") Home
                 a.menu-item(href="/login") Log In
