--- a/public/css/style.css
+++ b/public/css/style.css
@@ -298,6 +298,7 @@ input:focus {
 
 .hero-log p{
     font-size: 40px;
+    font-weight: bold;
 }
 
 .like-button {
@@ -373,4 +374,255 @@ input:focus {
 
 .user-container.left, .user-container.right {
     transform: scale(0.6);
+}
+
+.see-all-match-button {
+    background-color: rgba(134, 118, 161, 0.45);
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    display: inline-block;
+    margin-top: 20px;
+    font-weight: bold;
+    font-size: 20px;
+    box-shadow: 0 5px 6px rgba(255, 255, 255, 0.16);
+    transition: all 0.3s ease;
+    border: none;
+}
+
+.no-match {
+    padding-top: 40px;
+    text-align: center;
+    font-weight: normal;
+}
+
+.come-back-container {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+
+.no-found-container {
+    justify-content: center;
+    align-self: center;
+    text-align: center;
+}
+
+.no-found-container h1 {
+    font-weight: bold;
+    color: #ffffff;
+}
+
+.no-found-container p {
+    align-self: center;
+    font-weight: normal;
+    color: #ffffff;
+    font-size: 25px;
+}
+
+.matched-container {
+    min-height: 500px;
+    background-color: #10101c;
+    padding: 45px 110px;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.matched-user-container {
+    display: flex;
+    align-items: center;
+    background-color: #eeeeee;
+    border-radius: 20px;
+    padding: 10px 20px;
+    margin: 20px 0 ;
+    width: 90%;
+    height: 80px;
+    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
+}
+
+.matched-user-container p {
+    margin: 0;
+    color: #fff;
+}
+
+.matched-user-container .photo {
+    margin-left: 15px;
+    color: #10101c;
+}
+
+.user-info {
+    margin-left: 30px;
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+    flex-grow: 1;
+}
+
+.user-info h2 {
+    margin: 0;
+    font-size: 24px;
+    color: #000000;
+}
+
+.user-info p {
+    margin: 0;
+    font-size: 18px;
+    color: #292949;
+}
+
+.user-actions {
+    display: flex;
+    gap: 10px;
+    align-self: stretch;
+    align-items: center;
+}
+
+button.remove-chat-button,
+a.open-chat-button {
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    display: inline-block;
+    font-weight: bold;
+    font-size: 20px;
+    box-shadow: 0 5px 6px rgba(24, 23, 23, 0.16);
+    transition: all 0.3s ease;
+    border: none;
+}
+
+.remove-chat-button {
+    background-color: rgb(17, 17, 38);
+}
+
+.open-chat-button {
+    background-color: #e0137f;
+}
+
+button.remove-chat-button:hover {
+    background-color: #e3e3f5;
+    color: #10101c;
+}
+
+a.open-chat-button:hover {
+    background-color: #f7defc;
+    color: #10101c;
+}
+
+.photo-placeholder {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #222;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 14px;
+}
+
+.come-back-container {
+    margin-top: 20px;
+}
+
+.chat-container {
+    min-height: 500px;
+    background-color: #111126;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    position: relative;
+}
+
+.messages {
+    list-style-type: none;
+    overflow-y: auto;
+    padding: 0;
+    width: 100%;
+    max-height: 400px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.chat-form-container {
+    background-color: #ffffff;
+    color: #10101c;
+    padding: 20px;
+    max-width: 600px;
+    min-height: 450px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.chat-form {
+
+}
+
+.chat-input {
+    width: calc(100% - 120px);
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid #dcdcdc;
+    margin-right: 10px;
+}
+
+.chat-container button[type='submit'] {
+    background-color: #0400ff;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    display: inline-block;
+    font-weight: bold;
+    font-size: 16px;
+    box-shadow: 0 5px 6px rgba(24, 23, 23, 0.16);
+    transition: all 0.3s ease;
+    border: none;
+}
+
+button[type='submit']:hover {
+    background-color: rgba(95, 106, 159, 0.45);
+}
+
+.message {
+    padding: 15px;
+    border-radius: 20px;
+    background-color: #f0f0f0;
+    max-width: fit-content;
+    word-break: break-word;
+}
+
+.message .name-time {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.time-mes {
+    font-size: 12px;
+    font-weight: normal;
+}
+
+.message .text {
+    margin: 0;
+}
+
+.message.own {
+    align-self: flex-end;
+    background-color: rgba(144, 144, 176, 0.71);
 }
