added django microservice

--- a/views/home.pug
+++ b/views/home.pug
@@ -54,7 +54,7 @@ html(lang="en")
         footer
             .footer-content
                 .links
-                    a(href="/info").footer-link Information
+                    a(href="http://localhost:8000/info/policy/").footer-link Information
                     a(href="/social").footer-link Social Media
 
             .copy
