--- a/views/register2.pug
+++ b/views/register2.pug
@@ -40,7 +40,7 @@ html(lang="en")
         footer
             .footer-contenta
                 .links
-                    a(href="/info").footer-link Information
+                    a(href="http://localhost:8000/info/policy/").footer-link Information
                     a(href="/social").footer-link Social Media
 
             .copy
