--- a/views/search.pug
+++ b/views/search.pug
@@ -66,7 +66,7 @@ html(lang="en")
         footer
             .footer-content
                 .links
-                    a(href="/info").footer-link Information
+                    a(href="http://localhost:8000/info/policy/").footer-link Information
                     a(href="/social").footer-link Social Media
             .copy
                 p &copy; 2024 Yama. All rights reserved.
