just fixed some parts

--- a/views/chat.pug
+++ b/views/chat.pug
@@ -25,6 +25,8 @@ html(lang="en")
                 form.chat-form
                     input.chat-input(type='text' placeholder='Type a message...' name='message')
                     button.send-button(type='submit') Send
+            .come-back-container
+                a.see-all-match-button(href='/delete-account') Delete My Account
 
         footer
             .footer-content
