--- a/views/matched.pug
+++ b/views/matched.pug
@@ -36,6 +36,8 @@ html(lang="en")
                         p Let's find your perfect match together.
                         .come-back-container
                             a.see-all-match-button(href="/search") Come Back to Search
+                .come-back-container
+                    a.see-all-match-button(href='/delete-account') Delete My Account
 
         footer
             .footer-content
