--- a/views/search.pug
+++ b/views/search.pug
@@ -62,6 +62,8 @@ html(lang="en")
                     p Maybe you already have your perfect match?
                     .see-all-match-container
                         a.see-all-match-button(href=`/${username}/chats`) See All Matches
+            .come-back-container
+                a.see-all-match-button(href='/delete-account') Delete My Account
 
         footer
             .footer-content
